--- a/Week 1/Assignment/solution/portfolio.html
+++ b/Week 1/Assignment/solution/portfolio.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="description" content="Your description goes here">
     <meta name="keywords" content="one, two, three">
-    <title>Joe Johnson | Portfolio</title>
+    <title>Jose Tejada| Portfolio</title>
 
     <!-- external CSS link -->
 
