--- a/Week 4/lesson 08 - Intro to jQuery/starter_code/traffic_light/index.html
+++ b/Week 4/lesson 08 - Intro to jQuery/starter_code/traffic_light/index.html
@@ -23,8 +23,9 @@
   <div id="slowLight" class="bulb"></div>
   <div id="goLight" class="bulb"></div>
 </div>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
-
+<script src="js/index.js"></script>
 
 </body>
 
