--- a/Week 1/Assignment/starter_code/index.html
+++ b/Week 1/Assignment/starter_code/index.html
@@ -19,15 +19,15 @@
       <a href="portfolio.html">Portfolio</a>
     </nav>
 
-    <h1>Mansoor Siddeeq IS THE BEST!!</h1>
+    <h1>Mansoor Siddeeq IS THE BEST!!, Im trying to be just like you when I grew up.</h1>
 
     <hr>
 
     <img src="https://www.libstash.com/public/avatars/default.png" alt="Avatar">
-    <h2>I Enjoy Life as a Developer</h2>
-    <p>I'm Mansoor Siddeeq, a Developer based in NYC.  I Have ten years of experience in the graphic design world, specializing in the creation of responsive websites. I also enjoy playing soccer.</p>
+    <h2>I enjoy life as problem solver.</h2>
+    <p>I'm Jose Tejada Im trying to become a developer to add more value to my bussiness. I been trying to add this new skill to my tools that way I can serve my costumer base better.</p>
 
-    <p>I once created a mobile app for my grandmother.</p>
+    <p>I been meaning to add webb developtment to my repertuare.</p>
 
     <p>More technical stuff</p>
 
