--- a/Week 5/lesson 9/starter_code/score_keeper/index.html
+++ b/Week 5/lesson 9/starter_code/score_keeper/index.html
@@ -21,7 +21,8 @@
 	<h1 id="result">0</h1>
 
 
-
+<script src="https://ajax.googleapis.com/ajax/libs/dojo/1.13.0/dojo/dojo.js"></script>
+<script type="js/index.js"></script>
 </body>
 
 </html>
